@@ -1,7 +1,13 @@
+2011-09-29  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/color.c src/graph3d.c src/graphics.c:  User-specified axis tick
+	labels should override auto-generated tick labels in 3D plots just as
+	they already do in 2D plots.
+
 2011-09-08  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/graphics.c (plot_image_or_update_axes):  "with image" from a
-	function may not make sense, but at least it should not seqfault.
+	function may not make sense, but at least it should not segfault.
 	Bug #3406642
 
 2011-09-01  Ethan A Merritt  <merritt@u.washington.edu>
